--- a/test/command/4677.md
+++ b/test/command/4677.md
@@ -1,5 +1,6 @@
 ```
-% echo '![Caption](img.png){#img:1}' | pandoc --to "markdown-bracketed_spans-fenced_divs-link_attributes-simple_tables-multiline_tables-grid_tables-pipe_tables-fenced_code_attributes-markdown_in_html_blocks-table_captions-smart"
+% pandoc --to "markdown-bracketed_spans-fenced_divs-link_attributes-simple_tables-multiline_tables-grid_tables-pipe_tables-fenced_code_attributes-markdown_in_html_blocks-table_captions-smart"
+![Caption](img.png){#img:1}
 ^D
 <figure>
 <img src="img.png" alt="Caption" id="img:1" /><figcaption>Caption</figcaption>
