Edited FR translation, 'Chapter' translates 'Chapitre' (typo)

--- a/data/translations/fr.yaml
+++ b/data/translations/fr.yaml
@@ -2,7 +2,7 @@ Abstract: Résumé
 Appendix: Annexe
 Bibliography: Bibliographie
 Cc: Cc
-Chapter: Chaptire
+Chapter: Chapitre
 Contents: Table des matières
 Figure: Fig.
 Glossary:
