Edited FR translation, 'Figure' translates to 'Figure'

--- a/data/translations/fr.yaml
+++ b/data/translations/fr.yaml
@@ -4,7 +4,7 @@ Bibliography: Bibliographie
 Cc: Cc
 Chapter: Chapitre
 Contents: Table des matières
-Figure: Fig.
+Figure: Figure
 Glossary:
 Index: Index
 ListOfFigures: Table des figures
