Edited FR translation, 'Glossary' translates to 'Glossaire'

--- a/data/translations/fr.yaml
+++ b/data/translations/fr.yaml
@@ -5,7 +5,7 @@ Cc: Cc
 Chapter: Chapitre
 Contents: Table des matières
 Figure: Figure
-Glossary:
+Glossary: Glossaire
 Index: Index
 ListOfFigures: Table des figures
 ListOfTables: Liste des tableaux
