Edited FR translation, first letter to uppercase

--- a/data/translations/fr.yaml
+++ b/data/translations/fr.yaml
@@ -9,12 +9,12 @@ Glossary: Glossaire
 Index: Index
 ListOfFigures: Table des figures
 ListOfTables: Liste des tableaux
-Page: page
-Part: partie
+Page: Page
+Part: Partie
 Preface: Préface
 Proof: Démonstration
 References: Références
-See: voir
+See: Voir
 SeeAlso: voir aussi
 Table: Tab.
-To: à
+To: À
