Edited FR translation, 'Table' translates to 'Tableau'

--- a/data/translations/fr.yaml
+++ b/data/translations/fr.yaml
@@ -15,6 +15,6 @@ Preface: Préface
 Proof: Démonstration
 References: Références
 See: Voir
-SeeAlso: voir aussi
-Table: Tab.
+SeeAlso: Voir aussi
+Table: Tableau
 To: À
